[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "djust-theming"
version = "1.0.0"
description = "Production-ready theming system for Django — shadcn/ui inspired, reactive, Tailwind-ready, with component library"
authors = [{name = "djust contributors"}]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["django", "theming", "css", "dark-mode", "design-system", "shadcn"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "Django>=4.2",
]

[project.optional-dependencies]
djust = [
    "djust>=0.3.0rc5",
]
dev = [
    "pytest>=7.0",
    "pytest-django>=4.5",
]

[project.urls]
Homepage = "https://djust.org"
Repository = "https://github.com/djust-org/djust-theming"

[tool.setuptools.packages.find]
include = ["djust_theming*"]

[tool.setuptools.package-data]
djust_theming = [
    "templates/**/*.html",
    "static/**/*.js",
    "static/**/*.css",
]
