[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "djust-theming"
version = "99.0.0"
description = "DEPRECATED: use `pip install djust` instead."
authors = [{name = "djust contributors"}]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "djust>=0.5.6rc1",
]

[project.urls]
Homepage = "https://djust.org"
Repository = "https://github.com/djust-org/djust-theming"

[tool.setuptools.packages.find]
include = ["djust_theming"]
exclude = ["djust_theming.*"]
